--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <h1>ОП.04 - ДЗ №1</h1>
 
-  <p>
-    Это файл домашнего задания №1, которое выполнил студент/студентка <strong id="student">Ким Вадим Максимович</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
-  </p>
+ <p>
+   Это файл домашнего задания №1, которое выполнил студент/студентка <strong id="student">ФИО</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
+ </p>
 
-  <script src="script.js"></script>
+ <script src="script.js"></script>
 </body>
 </html>
